--- a/src/zappa_settings.json
+++ b/src/zappa_settings.json
@@ -5,6 +5,8 @@
         "project_name": "btc-assistant",
         "runtime": "python3.6",
         "s3_bucket": "btc-assistant",
+        "memory_size": 128,
+        "keep_warm": false,
         "events": [{
             "function": "index.lambda_handler", 
             "expression": "rate(1 minute)"
