--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ requests==2.18.4
 python-dateutil==2.6.1
 boto3==1.7.6
 sqlalchemy==1.2.14
-zappa==0.45.1
+zappa==0.47.1
+Flask==1.0.2
+flask-restplus==0.12.1
