--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ python-dateutil==2.6.1
 boto3==1.7.6
 sqlalchemy==1.2.14
 zappa==0.47.1
-Flask==1.0.2
-flask-restplus==0.12.1
 marshmallow==2.16.3
+fastapi==0.42.0
+uvicorn==0.10.3
