--- a/src/api_template.yaml
+++ b/src/api_template.yaml
@@ -5,14 +5,27 @@ Description: >
 
   Sample SAM Template for sam-app
 
+Parameters:
+  Application:
+    Type: String
+    Default: btc-assistant-api
+    Description: Name of application.
+  Stage:
+    Type: String
+    AllowedValues:
+      - prod
+      - staging
+    Default: staging
+
 Globals:
   Function:
-    Timeout: 3
+    Timeout: 30
 
 Resources:
   CryptoAPIFunction:
     Type: AWS::Serverless::Function
     Properties:
+      FunctionName: !Join ["-", [!Ref Application, !Ref Stage]]
       CodeUri: web_app/
       Handler: handler.lambda_handler
       Runtime: python3.8
@@ -27,3 +40,20 @@ Resources:
           Properties:
             Path: /{+proxy}
             Method: all
+  DynamoDbIAMRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: !Join ["-", [!Ref Application, !Ref Stage]]
+      Policies:
+        - PolicyName: "DynamoDB access"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: "Allow"
+                Action:
+                - dynamodb:BatchGet*,
+                - dynamodb:DescribeStream,
+                - dynamodb:DescribeTable,
+                - dynamodb:Get",
+                - dynamodb:Query,
+                Resource: !GetAtt DynamoDBTable.Arn
