--- a/src/btc_assistant/zappa_settings.json
+++ b/src/btc_assistant/zappa_settings.json
@@ -3,30 +3,33 @@
         "aws_region": "ap-southeast-2",
         "app_function": "index.lambda_handler",
         "project_name": "btc-assistant",
-        "runtime": "python3.6",
+        "runtime": "python3.8",
         "s3_bucket": "btc-assistant",
         "memory_size": 128,
         "keep_warm": false,
-        "events": [{
-            "function": "index.lambda_handler", 
-            "expression": "rate(1 minute)"
-        }]
+        "events": [
+            {
+                "function": "index.lambda_handler",
+                "expression": "rate(1 minute)"
+            }
+        ]
     },
     "staging": {
         "aws_region": "ap-southeast-2",
         "app_function": "index.lambda_handler",
         "project_name": "btc-assistant-staging",
-        "runtime": "python3.6",
+        "runtime": "python3.8",
         "s3_bucket": "btc-assistant-staging",
         "memory_size": 128,
         "keep_warm": false,
         "environment_variables": {
-            "ENVIRONMENT": "STAGING"
+            "ENVIRONMENT": "staging"
         },
-        "events": [{
-            "function": "index.lambda_handler", 
-            "expression": "rate(1 minute)"
-        }]
-        
+        "events": [
+            {
+                "function": "index.lambda_handler",
+                "expression": "rate(1 minute)"
+            }
+        ]
     }
 }
