--- a/src/worker_template.yaml
+++ b/src/worker_template.yaml
@@ -36,7 +36,7 @@ Resources:
         ScheduledEvent:
           Type: Schedule
           Properties:
-            Schedule: rate(1 minute)
+            Schedule: cron(0/1 * * * ? *)
       Policies:
         - Statement:
           - Sid: DynamoLimitedWriteAccessPolicy
@@ -44,6 +44,8 @@ Resources:
             Action:
               - dynamodb:PutItem
             Resource: !GetAtt DynamoDBTable.Arn
+        - SSMParameterReadPolicy:
+            ParameterName: !Sub ${Application}/${Stage}/*
 
   DynamoDBTable:
     Type: AWS::DynamoDB::Table
